[package]
name = "exp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.26"
ratatui = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
